--- a/Assignment2_BIT216/src/index.html
+++ b/Assignment2_BIT216/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Covid19System</title>
+  <title>Covid-19 Tracer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
